CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2003 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2003.Sep.11 (0.9.13) [cvs]
  * Fixed incorrect tag in HTML documentation.  (Bad results in IE)

  * Fixed typo regarding "savedir" in README.

  * 'printcfg' options not displayed in usage, except on Win32.

  * Moved available language listing to its own usage, shown when
    "--lang" called incorrectly, or as "--lang list" or "--lang help".
    (Suggested by Ben Armstrong)

  * Reorganized usage display
    (Suggested by Ben Armstrong)

  * If the top-left-most file is deleted in the Open screen, it now
    scrolls up one line (so that the cursor isn't off the top of the
    screen!)

  * Cleaned up font aliasing blurriness and JPEG noise in title image.

  * Updated copyright date in title image.
 
  * Cursor doesn't change to 'hand' shape over color buttons when colors
    aren't available (e.g., Magic tool, most Stamps, etc.)

  * Cursor doesn't change to 'hand' shape over selector buttons when
    they aren't available.

  * Added "--noshortcuts" option, to disable keyboard shortcuts
    (e.g., [Ctrl]+[S] for Save, etc.)


2003.Aug.18 (0.9.12)
  * Replaced "efont-serif" fonts with those from the 'ttf-freefont' package,
    for better support of ISO8859-13 symbols (e.g., for Lithuanian).
    Fonts copyright the Free Software Foundation.
    Thanks to Mantas Kriauciunas <monte@mail.lt> for the tip.

  * Made main event loop ignore motion events if the loop has spun too long.
    (Fixes problems where shape or stamp tools take forver to 'catch up' with
    the mouse; especially noticable on slow machines over remote X display.)

  * Walloon translation.
    Pablo Saratxaga <pablo@walon.org>
  
  * Translated to Russian
    Dmitriy Ivanov <ace22b@myrealbox.com>

  * Translated to Malay
    Muhammad Najmi Ahmad Zabidi <md_najmi@yahoo.com>

  * French translation update.