@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2003.09.11
-.TH TUXPAINT 1 "11 Sep 2003" "0.9.13" "Tux Paint"
+.\" tuxpaint.1 - 2003.09.14
+.TH TUXPAINT 1 "14 Sep 2003" "0.9.13" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -429,6 +429,7 @@ Mantas Kriauciunas,
 Arkadiusz Lipiec,
 Martin,
 Marco Milanesi,
+Mugunth,
 Primoz Peterlin,
 Milan Plzik,
 John Popplewell,
